Refactoring: upgrade to Java 25 and Spring boot 4.0.0 (#239)
Co-authored-by: Mahiuddin Al Kamal <mahiuddinalkamal@gmail.com>
Co-authored-by: Copilot <198982749+Copilot@users.noreply.github.com>
Co-authored-by: mahiuddinalkamal <49327768+mahiuddinalkamal@users.noreply.github.com>